@@ -1,6 +1,9 @@
 package com.example.springrecipe.service;
 
 import com.example.springrecipe.dto.ReviewDTO;
+import com.example.springrecipe.exceptions.RecipeNotFoundException;
+import com.example.springrecipe.exceptions.ReviewNotFoundException;
+import com.example.springrecipe.exceptions.UserNotFoundException;
 import com.example.springrecipe.mapper.RecipeMapper;
 import com.example.springrecipe.model.Recipe;
 import com.example.springrecipe.model.Review;
@@ -13,7 +16,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -33,7 +35,7 @@ public class ReviewService {
     @Transactional(readOnly = true)
     public ReviewDTO getReviewById(Long id) {
         Review review = reviewRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Review not found"));
+                .orElseThrow(() -> new ReviewNotFoundException("Review not found"));
         return mapper.toReviewDTO(review);
     }
 
@@ -41,23 +43,23 @@ public class ReviewService {
     public List<ReviewDTO> getReviewsByRecipe(Long recipeId) {
         return reviewRepository.findByRecipeId(recipeId).stream()
                 .map(mapper::toReviewDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional(readOnly = true)
     public List<ReviewDTO> getReviewsByUser(Long userId) {
         return reviewRepository.findByUserId(userId).stream()
                 .map(mapper::toReviewDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
     public ReviewDTO createReview(ReviewDTO dto) {
         User user = userRepository.findById(dto.getUserId())
-                .orElseThrow(() -> new RuntimeException("User not found"));
+                .orElseThrow(() -> new UserNotFoundException("User not found"));
 
         Recipe recipe = recipeRepository.findById(dto.getRecipeId())
-                .orElseThrow(() -> new RuntimeException("Recipe not found"));
+                .orElseThrow(() -> new RecipeNotFoundException("Recipe not found"));
 
         Review review = new Review();
         review.setRating(dto.getRating());
@@ -72,7 +74,7 @@ public class ReviewService {
     @Transactional
     public ReviewDTO updateReview(Long id, ReviewDTO dto) {
         Review review = reviewRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Review not found"));
+                .orElseThrow(() -> new ReviewNotFoundException("Review not found"));
 
         review.setRating(dto.getRating());
         review.setComment(dto.getComment());
@@ -84,7 +86,7 @@ public class ReviewService {
     @Transactional
     public void deleteReview(Long id) {
         if (!reviewRepository.existsById(id)) {
-            throw new RuntimeException("Review not found");
+            throw new ReviewNotFoundException("Review not found");
         }
         reviewRepository.deleteById(id);
     }
